# numinous

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  PLAY.md  README.md  VERIFY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/radio/: ASSET-LICENSE.txt
crates/audio/: Cargo.toml
crates/audio/examples/: tone.rs
crates/audio/src/: capture.rs  lib.rs
crates/broadcast/: Cargo.toml  build.rs  build_support.rs
crates/broadcast/src/: consent.rs  fingerprint.rs  framing.rs  hex.rs  lib.rs  pairing.rs  projection.rs  queue.rs  receiver.rs  wire.rs
crates/core/: Cargo.toml
crates/core/examples/: font_preview.rs
crates/core/src/: aliens.rs  ansi.rs  cairn.rs  canvas.rs  challenge.rs  chiptune.rs  citations.rs  codebreaker.rs  concepts.rs  era.rs  fifteen.rs  font.rs  hackenbush.rs  humor.rs  insights.rs  journal.rs  journey.rs  lib.rs  life_sound.rs  motifs.rs  munch_arcade.rs  munchers.rs  nim.rs  party.rs  persistence.rs  predict.rs  quiz.rs  radio.rs  raster.rs  registry.rs  resonance.rs  rng.rs  room.rs  scores.rs  secret.rs  seti.rs  share.rs  sim.rs  sound.rs  spectrum.rs  (+3 more)
crates/core/src/rooms/: agm_mean.rs  airy.rs  aizawa.rs  am_modulation.rs  apollonian.rs  archimedean.rs  arecibo.rs  astroid.rs  attention.rs  audioactive.rs  baker.rs  barnsley_fern.rs  basel.rs  bayes_update.rs  beats.rs  beatty.rs  bedhead.rs  benford.rs  berry.rs  bessel.rs  beverton_holt.rs  bifolium.rs  bifurcation.rs  birthday.rs  blackbody.rs  blancmange.rs  bloch_sphere.rs  bogdanov.rs  borromean.rs  boy_surface.rs  braess.rs  bragg.rs  brewster.rs  brownian.rs  brusselator.rs  buddhabrot.rs  buffon_aha.rs  buffon_needle.rs  burning_ship.rs  busy_beaver.rs  (+318 more)
crates/core/src/rooms/double_pendulum/: release_sound.rs
crates/core/src/rooms/galton_board/: path_sound.rs
crates/core/src/sims/: big_bang.rs  black_hole.rs  carburetor.rs  mod.rs  supernova.rs  tribbles.rs  wing.rs
crates/gpu/: Cargo.toml
crates/gpu/examples/: info.rs  postcard.rs
crates/gpu/src/: lib.rs  mandelbrot.wgsl
data/: cairn.txt
docs/: AGENT_PLAY.md  ARCADE.md  ARCHITECTURE.md  CONSTELLATION.md  CONSTRUCTIONS.md  CREATOR.md  DESIGN.md  DIGITAL_DEVELOPMENT.md  DIGITAL_MINDS.md  ENGINEERING.md  EXTENSIBILITY.md  INSIGHTS.md  INTERFACES.md  LORE.md  MUSIC.md  NORTH_STAR.md  PANEL.md  PEDAGOGY.md  PLAYFUL.md  PLAYING.md  PLAYTESTERS.md  PLAYTESTS.md  PROGRESSION.md  QUALITY.md  RADIO_ASSETS.md  README.md  RESEARCH.md  REVIEW.md  ROADMAP.md  ROOMS.md  ROSETTA.md  SCOPE.md  SOUND.md  STUDIO.md  SYNESTHESIA.md  VISION.md  VISUALS.md
faces/app/: Cargo.toml  build.rs
faces/app/examples/: flagship_perf.rs  screens.rs
faces/app/src/: audio_state.rs  bindings.rs  console.rs  controls.rs  feedback.rs  game_draw.rs  gamepad.rs  hud.rs  input_feedback.rs  input_legend.rs  lib.rs  live_render.rs  main.rs  mouse_input.rs  nim_render.rs  overlays.rs  play.rs  playtest.rs  postcard.rs  radio_cache.rs  room_input.rs  room_phase.rs  save_gate.rs  session_audio.rs  session_viewer.rs  studio_panel.rs  studio_render.rs
faces/cli/: Cargo.toml
faces/cli/src/: main.rs
faces/cli/tests/: cli_smoke.rs
faces/mcp/: Cargo.toml
faces/mcp/src/: broadcast.rs  main.rs
faces/mcp/tests/: stdio_session.rs
scripts/: agent-hallway.py  agent-tactile.py  check-style.ps1  check-style.sh  check.ps1  check.sh  flagship-perf.ps1  flagship-perf.sh  install.ps1  install.sh  mcp-play.py  test-mcp-play.py  verify.ps1  verify.sh
scripts/hooks/: pre-commit
