# Numinous workspace.
# Code-quality standards, version pins, and CI gates: see docs/ENGINEERING.md.
[workspace]
resolver = "3"
members = ["crates/audio", "crates/broadcast", "crates/core", "crates/gpu", "faces/app", "faces/cli", "faces/mcp"]

[workspace.package]
version = "0.2.0-alpha.1"
edition = "2024"
# Public repository license, matched by LICENSE and the README.
license = "Apache-2.0"
# Stable let chains in the core establish the workspace floor.
rust-version = "1.88"
repository = "https://github.com/blisspixel/numinous"

[workspace.dependencies]
# Internal crates.
numinous-core = { version = "0.2.0-alpha.1", path = "crates/core" }
numinous-audio = { version = "0.2.0-alpha.1", path = "crates/audio" }
numinous-broadcast = { version = "0.2.0-alpha.1", path = "crates/broadcast" }
numinous-gpu = { version = "0.2.0-alpha.1", path = "crates/gpu" }
# Shared third-party versions; Cargo.lock pins the resolved public baseline.
clap = { version = "4", features = ["derive"] }
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.11"
subtle = "2.6"

# Lints applied to every crate via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Hardening target for 0.2: promote clippy::pedantic to warn once the codebase is clean under it.

# Release profile: documented, tuned for the shipped binary.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
