[package]
name = "numinous-audio"
description = "Numinous audio: adaptive cpal output on the system default device, portable across OSes."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
cpal = "0.16"

[dev-dependencies]
hound = "3"

[lints]
workspace = true
