[package]
name = "numinous-broadcast"
description = "Bounded local consent and transport primitives for Numinous session viewing."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }

[build-dependencies]
sha2 = { workspace = true }

[lints]
workspace = true
