[package]
name = "numinous-gpu"
description = "Numinous GPU rendering: adaptive wgpu context and offscreen render, portable across GPUs and OSes."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
png = "0.18"

[lints]
workspace = true
