[package]
name = "numinous-app"
description = "Numinous windowed app: a real window showing a room, animating in full color."
build = "build.rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "numinous-app"
path = "src/main.rs"

[dependencies]
numinous-core = { workspace = true }
numinous-audio = { workspace = true }
numinous-broadcast = { workspace = true }
numinous-gpu = { workspace = true }
serde_json = { workspace = true }
winit = { version = "0.30", default-features = false, features = [
    "rwh_06",
    "wayland",
    "wayland-csd-adwaita-notitle",
    "wayland-dlopen",
    "x11",
] }
softbuffer = "0.4"
png = "0.18"
hound = "3"
symphonia = { version = "0.6", default-features = false, features = ["mp3"] }
gilrs = "0.11.2"

[dev-dependencies]

[build-dependencies]
winresource = "0.1.31"

[lints]
workspace = true
