[package]
name = "numinous-cli"
description = "Numinous CLI: the terminal face of the headless core (list, describe, render rooms)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "numinous"
path = "src/main.rs"

[dependencies]
numinous-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
